Добавлена возможность ставить рейтинг товару

--- a/src/less/blocks/basket.less
+++ b/src/less/blocks/basket.less
@@ -2,6 +2,10 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    width: 160px;
+    flex: 0 0 160px;
+    justify-content: center;
+    color: @text;
     cursor: pointer;
     > * {
         &:not(:last-child) {
