--- a/src/less/blocks/cards.less
+++ b/src/less/blocks/cards.less
@@ -8,7 +8,7 @@
 
 .cards__list {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
     > * {
         &:not(:last-child) {
@@ -49,7 +49,7 @@
 }
 
 .card__text {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 
     p {
         line-height: 1.4;
