--- a/src/pug/modules/cards.pug
+++ b/src/pug/modules/cards.pug
@@ -9,7 +9,18 @@ section.cards
                 .card__text
                     p Самый нужный инструмент в исследованиях. Простой и стильный.
                 // begin rating 
-                .card__rating.rating
+                .rating.rating-1
+                    .reviewStars-input
+                        input#star-1(name='reviewStars1', type='radio')
+                        label(title='gorgeous', for='star-1')
+                        input#star-2(name='reviewStars1', type='radio')
+                        label(title='good', for='star-2')
+                        input#star-3(name='reviewStars1', type='radio')
+                        label(title='regular', for='star-3')
+                        input#star-4(name='reviewStars1', type='radio')
+                        label(title='poor', for='star-4')
+                        input#star-5(name='reviewStars1', type='radio')
+                        label(title='bad', for='star-5')
                 // end rating 
                 button.button В корзину
             li.card
@@ -19,7 +30,18 @@ section.cards
                 .card__text
                     p Самый нужный инструмент в исследованиях. Простой и стильный.
                 // begin rating 
-                .card__rating.rating
+                .rating.rating-2
+                    .reviewStars-input
+                        input#star-6(name='reviewStars2', type='radio')
+                        label(title='gorgeous', for='star-6')
+                        input#star-7(name='reviewStars2', type='radio')
+                        label(title='good', for='star-7')
+                        input#star-8(name='reviewStars2', type='radio')
+                        label(title='regular', for='star-8')
+                        input#star-9(name='reviewStars2', type='radio')
+                        label(title='poor', for='star-9')
+                        input#star-10(name='reviewStars2', type='radio')
+                        label(title='bad', for='star-10')
                 // end rating 
                 button.button В корзину
             li.card
@@ -29,7 +51,18 @@ section.cards
                 .card__text
                     p Самый нужный инструмент в исследованиях. Простой и стильный.
                 // begin rating 
-                .card__rating.rating
+                .rating.rating-3
+                    .reviewStars-input
+                        input#star-11(name='reviewStars3', type='radio')
+                        label(title='gorgeous', for='star-11')
+                        input#star-12(name='reviewStars3', type='radio')
+                        label(title='good', for='star-12')
+                        input#star-13(name='reviewStars3', type='radio')
+                        label(title='regular', for='star-13')
+                        input#star-14(name='reviewStars3', type='radio')
+                        label(title='poor', for='star-14')
+                        input#star-15(name='reviewStars3', type='radio')
+                        label(title='bad', for='star-15')
                 // end rating 
                 button.button В корзину
             li.card
@@ -37,9 +70,21 @@ section.cards
                     img(src="img/cards/card-img.jpg", alt="Card image")
                 h6 Микроскоп
                 .card__text
-                    p Самый нужный инструмент в исследованиях. Простой и стильный. Самый нужный инструмент в исследованиях. Простой и стильный.
+                    p Самый нужный инструмент в исследованиях. Простой и стильный.
                 // begin rating 
-                .card__rating.rating
+                .rating.rating-4
+                    .reviewStars-input
+                        input#star-16(name='reviewStars4', type='radio')
+                        label(title='gorgeous', for='star-16')
+                        input#star-17(name='reviewStars4', type='radio')
+                        label(title='good', for='star-17')
+                        input#star-18(name='reviewStars4', type='radio')
+                        label(title='regular', for='star-18')
+                        input#star-19(name='reviewStars4', type='radio')
+                        label(title='poor', for='star-19')
+                        input#star-20(name='reviewStars4', type='radio')
+                        label(title='bad', for='star-20')
                 // end rating 
                 button.button В корзину
+            
 // end cards 
