--- a/src/pug/modules/header.pug
+++ b/src/pug/modules/header.pug
@@ -44,7 +44,7 @@ header.header
                             | Иванов
                 // end user 
                 // begin basket 
-                .basket
+                a(href="/").basket
                     .basket__img
                         img(src="img/basket/shopping-cart.svg", alt="Basket icon")
                     .basket__quantity
