Добавлена сортировка по убыванию и по уменьшению. Решен баг с нерабочими кнопками после сортировки

--- a/src/less/blocks/cards.less
+++ b/src/less/blocks/cards.less
@@ -49,9 +49,17 @@
 }
 
 .card__text {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 
     p {
         line-height: 1.4;
     }
+}
+
+.card__price {
+    margin-bottom: 10px;
+    color: #000000;
+    font-family: @alt-f;
+    letter-spacing: 1px;
+    font-size: 14px;
 }
