--- a/src/pug/modules/cards.pug
+++ b/src/pug/modules/cards.pug
@@ -1,6 +1,15 @@
 // begin cards 
 section.cards
     .cards__container
+
+        // begin sort 
+        .sort
+          button.sort__item.asc 
+            span По возрастанию
+          button.sort__item.desc 
+            span По убыванию
+        // end sort 
+
         ul.cards__list
             li.card
                 .card__img
@@ -8,6 +17,7 @@ section.cards
                 h6 Микроскоп
                 .card__text
                     p Самый нужный инструмент в исследованиях. Простой и стильный.
+                .card__price(data-price="5000") Цена: 5000,00р 
                 // begin rating 
                 .rating.rating-1
                     .reviewStars-input
@@ -29,6 +39,7 @@ section.cards
                 h6 Микроскоп
                 .card__text
                     p Самый нужный инструмент в исследованиях. Простой и стильный.
+                .card__price(data-price="14000") Цена: 14000,00 р
                 // begin rating 
                 .rating.rating-2
                     .reviewStars-input
@@ -50,6 +61,7 @@ section.cards
                 h6 Микроскоп
                 .card__text
                     p Самый нужный инструмент в исследованиях. Простой и стильный.
+                .card__price(data-price="2500") Цена: 2500,00р 
                 // begin rating 
                 .rating.rating-3
                     .reviewStars-input
@@ -71,6 +83,7 @@ section.cards
                 h6 Микроскоп
                 .card__text
                     p Самый нужный инструмент в исследованиях. Простой и стильный.
+                .card__price(data-price="9000") Цена: 9000,00р 
                 // begin rating 
                 .rating.rating-4
                     .reviewStars-input
