--- a/src/less/base/variables.less
+++ b/src/less/base/variables.less
@@ -8,8 +8,8 @@
 @bg: #FBFBFB;
 
 // media quaries
-@lg: 1199.1px;
-@md: 991.1px;
-@sm: 767.1px;
-@xs: 576px;
-@xxs: 375px;
+@break_lg: 1390px;
+@break_md: 1200px;
+@break_sm: 991.1px;
+@break_xs: 767.1px;
+@break_xxs: 576px;
