--- a/src/less/blocks/sort.less
+++ b/src/less/blocks/sort.less
@@ -12,12 +12,17 @@
             }
         }
     }
+
+    .sm-block({
+        text-align: center;
+    });
 }
 
 .sort__item {
     position: relative;
     background-color: transparent;
     border: 0;
+    font-size: 15px;
     cursor: pointer;
     
     span {
